pom fix